# swift-dx

./: .gitignore  NOTICE  Package.swift  README.md  SECURITY.md  integrity.json
.github/workflows/: ci.yml
Benchmarks/: Package.resolved  Package.swift  README.md  run-async.sh  run-final.sh  run-pool.sh  run-raw-async.sh  run-raw-final.sh  run-raw-pool.sh  run-real-workloads.sh
Benchmarks/Tooling/cpp-bench/: CMakeLists.txt  main.cpp
Examples/: Package.swift  README.md
IntegrationTests/: README.md
IntegrationTests/DXClickHouseIntegration/: ArrayColumnIntegrationTest.swift  ArrayLowCardinalityDecodeTest.swift  ArrayLowCardinalityIntegrationTest.swift  ArrayOfTupleDecodeTest.swift  ArrayOfTupleMultiFieldDecodeTest.swift  BinaryStringProbeIntegrationTest.swift  ClickHouseBulkAndTypesIntegrationTests.swift  ClickHouseColumnarFastSelectLoadTests.swift  ClickHouseCompressionTests.swift  ClickHouseFacadeIntegrationTests.swift  ClickHouseFixedStringMapArrayViewIntegrationTests.swift  ClickHouseFuzzMatrixTests.swift  ClickHouseIntegrationTests.swift  ClickHouseMidQueryDisconnectTests.swift  ClickHouseModernFeaturesTests.swift  ClickHouseMultiNodeTests.swift  ClickHousePoolStressTests.swift  ClickHouseProductionSchemaFixtureTests.swift  ClickHouseSampleSchemaTests.swift  ClickHouseSlowLorisTests.swift  ClickHouseStringViewIntegrationTests.swift  ClickHouseTLSConnectivityTests.swift  ClickHouseTypeMatrixTests.swift  ClientOverloadsIntegrationTest.swift  CodableRoundTripIntegrationTest.swift  CommonTypeProbeTest.swift  CompositeHangProbe.swift  CompositeTypesIntegrationTest.swift  DateTime64IntegrationTest.swift  DateTimeZoneProbe.swift  EdgeCaseProbeIntegrationTest.swift  EncodeRoundTripIntegrationTest.swift  EnumColumnIntegrationTest.swift  FastDecodeIntegrationTest.swift  FixedStringCodableDecodeTest.swift  FixedStringIntegrationTest.swift  FixedStringStringAccessorTest.swift  GeoTypeProbe.swift  LowCardinalityFixedStringProbeTest.swift  LowCardinalityIntegrationTest.swift  (+32 more)
IntegrationTests/DXClickHouseRawIntegration/: ClientOverloadsIntegrationTest.swift  CodableRoundTripIntegrationTest.swift  OperationsIntegrationTest.swift
IntegrationTests/DXJetStreamIntegration/: AuthenticatedConnectionIntegrationTests.swift  ConnectionIntegrationTests.swift  EndToEndIntegrationTests.swift  FetchIntegrationTests.swift  IntegrationRoot.swift  JetStreamClientIntegrationTests.swift  MessagesStreamIntegrationTests.swift  NatsTestEnvironment.swift  PublishIntegrationTests.swift  RequestReplyIntegrationTests.swift  StreamManagementIntegrationTests.swift  TracingIntegrationTests.swift
IntegrationTests/DXPostgresIntegration/: PostgresArrayIntegrationTests.swift  PostgresCleartextAuthIntegrationTests.swift  PostgresCopyIntegrationTests.swift  PostgresDurabilityIntegrationTests.swift  PostgresExtendedTypeIntegrationTests.swift  PostgresFailoverIntegrationTests.swift  PostgresGeometryIntegrationTests.swift  PostgresIntegrationSupport.swift  PostgresIntegrationTests.swift  PostgresJSONWorkflowIntegrationTests.swift  PostgresObservabilityIntegrationTests.swift  PostgresPipelineIntegrationTests.swift  PostgresPoolTimeoutIntegrationTests.swift  PostgresPostGISIntegrationTests.swift  PostgresPreparedStatementIntegrationTests.swift  PostgresRowDecoderIntegrationTests.swift  PostgresServiceIntegrationTests.swift  PostgresStreamingIntegrationTests.swift  PostgresTLSIntegrationTests.swift  (+5 more)
Sources/DXCore/: README.md  (+1 more)
(+1496 files in other folders)
